# steinbit

./: .gitignore  LICENSE  README.md  default.nix  requirements.txt  setup.cfg  setup.py  steinbit.cfg  v2021.01.md
.github/workflows/: build.yaml
data/: bls.csv  rs.csv  translation.csv
docs/source/: conf.py  index.rst
nix/: lasio.nix  m2r2.nix  pytest-cov.nix  steinbit.nix
steinbit/: compare.py  config.py  create.py  mnemonic.py  steinbit.py  tool.py
steinbit/core/: __init__.py  frame.py  imagedataextractor.py  transformer.py  types.py
tests/: test_extraction.py  test_frame.py  test_mapping.py  test_mnemonic.py  test_steinbit.py  test_transformation.py
