[metadata]
description-file = README.md

[flake8]
per-file-ignores =
    ./setup.py:F401
    */__init__.py:F401
exclude =
    ./translate.py

[tool:pytest]
addopts =
    --doctest-modules
    --cov=steinbit
    --cov-report=annotate
    --cov-report=html
    --cov-report=xml
    -r a
    -v
testpaths =
    tests

[mypy]

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-PIL.*]
ignore_missing_imports = True

[mypy-tqdm.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-magic.*]
ignore_missing_imports = True
